--- a/src/utils/theme.css
+++ b/src/utils/theme.css
@@ -1,12 +1,12 @@
 body {
-  --green: #99C794;
+  --green: #B0E6AA;
   background-color: var(--bg);
 }
 
 body {
   -webkit-font-smoothing: antialiased;
-  --bg: #1B2B34;
-  --textNormal: rgba(255, 255, 255, 0.94);
+  --bg: rgb(21, 32, 43);
+  --textNormal: #FFFFFF;
   --textLink: var(--green);
   --hr: hsla(0, 0%, 100%, 0.2);
 }
