--- a/src/utils/theme.css
+++ b/src/utils/theme.css
@@ -1,12 +1,38 @@
 body {
   --green: #B0E6AA;
+  --white: #FFFFFF;
   background-color: var(--bg);
 }
 
 body {
   -webkit-font-smoothing: antialiased;
   --bg: rgb(21, 32, 43);
-  --textNormal: #FFFFFF;
+  --textNormal: var(--white);
   --textLink: var(--green);
   --hr: hsla(0, 0%, 100%, 0.2);
+}
+
+/* fixed position player */
+footer {
+	padding-bottom: 70px;
+}
+
+/* audio player override */
+.rhap_container {
+	border-top: 1px solid white;
+	background-color: var(--bg);
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	z-index: 1;
+	color: var(--white);
+}
+.rhap_header {
+	text-align: center;
+}
+.rhap_main-controls-button, .rhap_time {
+	color: var(--white);
+}
+.rhap_progress-indicator, .rhap_progress-filled {
+	background: var(--green);
 }
