--- a/src/utils/theme.css
+++ b/src/utils/theme.css
@@ -62,3 +62,24 @@ footer {
 		opacity: 0;
 	}
 }
+
+.container {
+	max-width: 42rem;
+}
+@media screen and (min-width: 1100px) {
+	.container {
+        max-width: 63rem;
+	}
+	.column {
+		display: flex;
+	}
+	.column-left {
+		flex: 0 0 500px;
+		margin-right: 15px;
+	}
+	.column-left-c {
+		position: fixed;
+		top: 50%;
+		transform: translateY(-50%);
+	}
+}
