--- a/src/utils/theme.css
+++ b/src/utils/theme.css
@@ -12,7 +12,7 @@ body {
   --hr: hsla(0, 0%, 100%, 0.2);
 }
 
-/* fixed position player */
+/* fixed position audio player */
 footer {
 	padding-bottom: 70px;
 }
@@ -44,42 +44,41 @@ footer {
 	border-right: 1px dotted var(--white);
 }
 
-@media screen and (min-width: 600px) {
-	.sidebar {
-		padding-left: 50px;
-		flex: 0 0 300px
-	}
+@media screen and (max-width: 1100px) {
 	.toc {
-		position: fixed;
-		height: calc(100vh - 75px);
-		overflow-y: auto;
-		margin-right: -999px;
-		padding-right: 999px;
-	}
-}
-@media screen and (max-width: 600px) {
-	.toc {
-		opacity: 0;
+		display: none;
 	}
 }
 
 .container {
+	display: flex;
+	flex: 1 1 auto;
 	max-width: 42rem;
+	flex-direction: column;
 }
 @media screen and (min-width: 1100px) {
 	.container {
-        max-width: 63rem;
+		max-width: 63rem;
+		flex-direction: row;
 	}
-	.column {
-		display: flex;
-	}
-	.column-left {
+	.hero-wrapper {
 		flex: 0 0 500px;
 		margin-right: 15px;
 	}
-	.column-left-c {
-		position: fixed;
-		top: 50%;
-		transform: translateY(-50%);
+		.hero {
+			position: fixed;
+			top: 50%;
+			transform: translateY(-50%);
+		}
+	.sidebar {
+		flex: 0 0 250px;
+		margin-left: 15px;
 	}
+		.toc {
+			position: fixed;
+			height: calc(100vh - 100px);
+			overflow-y: auto;
+			top: 50%;
+			transform: translateY(-50%);
+		}
 }
