--- a/src/layouts/EpLayout.astro
+++ b/src/layouts/EpLayout.astro
@@ -1,10 +1,10 @@
 ---
 import AudioPlayer from '@components/AudioPlayer.astro';
 
-import SEO from '@components/SEO.jsx';
-import Subscribe from '@components/Subscribe.jsx';
-import Support from '@components/Support.jsx';
-import Footer from '@components/Footer.jsx';
+import SEO from '@components/SEO.tsx';
+import Subscribe from '@components/Subscribe.tsx';
+import Support from '@components/Support.tsx';
+import Footer from '@components/Footer.tsx';
 import { hisMetadata } from "../../metadata.ts";
 
 import '../styles/custom.css';
