update: astro + import aliases

--- a/src/components/AudioPlayer.astro
+++ b/src/components/AudioPlayer.astro
@@ -133,9 +133,7 @@ const { src } = Astro.props;
 </script>
 
 <style>
-  @tailwind base;
-  @tailwind components;
-  @tailwind utilities;
+  @import "tailwindcss";
 
   #audio-player {
     --seek-before-width: 0%;
