--- a/src/layouts/EpLayout.astro
+++ b/src/layouts/EpLayout.astro
@@ -1,11 +1,11 @@
 ---
-import AudioPlayer from '@components/AudioPlayer.astro';
+import AudioPlayer from '@/components/AudioPlayer.astro';
 
-import SEO from '@components/SEO.tsx';
-import Subscribe from '@components/Subscribe.tsx';
-import Support from '@components/Support.tsx';
-import Footer from '@components/Footer.tsx';
-import { hisMetadata } from "../../metadata.ts";
+import SEO from '@/components/SEO.tsx';
+import Subscribe from '@/components/Subscribe.tsx';
+import Support from '@/components/Support.tsx';
+import Footer from '@/components/Footer.tsx';
+import { hisMetadata } from "@/metadata.ts";
 
 import '../styles/custom.css';
 
