--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
-import HomeLayout from '@layouts/HomeLayout.astro';
-import Main from '@components/Main.astro';
+import HomeLayout from '@/layouts/HomeLayout.astro';
+import Main from '@/components/Main.astro';
 import '../styles/custom.css';
 ---
 <HomeLayout>
