--- a/src/layouts/EpLayout.astro
+++ b/src/layouts/EpLayout.astro
@@ -5,41 +5,21 @@ import Subscribe from '@/components/Subscribe.tsx';
 import Support from '@/components/Support.tsx';
 import Footer from '@/components/Footer.tsx';
 import { hisMetadata } from "@/metadata.ts";
-import his_cover from "@/assets/his.jpg";
+import BaseHead from '@/components/BaseHead.astro';
 
 import '../styles/custom.css';
 
 const { frontmatter, slug } = Astro.props;
-const url = `${hisMetadata.siteUrl}${slug}`;
 ---
 
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <title>{frontmatter.title} - {hisMetadata.title}</title>
-    <meta name="description" content={frontmatter.description} />
-    <meta property="og:url" content={url} />
-    <meta property="og:title" content={`${frontmatter.title} - ${hisMetadata.title}`} />
-    <meta name="og:description" content={frontmatter.description} />
-    <meta name="twitter:card" content={frontmatter.embedUrl ? "player" : "summary"} />
-    <meta name="twitter:creator" content={hisMetadata.twitter} />
-    <meta property="og:image" content={`${hisMetadata.siteUrl}${his_cover.src}`} />
-    
-    {frontmatter.embedUrl && (
-      <>
-        <meta name="twitter:player" content={frontmatter.embedUrl} />
-        <meta name="twitter:player:width" content="500" />
-        <meta name="twitter:player:height" content="180" />
-      </>
-    )}
-    
-    <meta name="apple-itunes-app" content="app-id=1437677655" />
-    <link
-      rel="alternate"
-      type="application/rss+xml"
-      title={hisMetadata.title}
-      href={hisMetadata.rss}
+    <BaseHead
+      title={frontmatter.title}
+      description={frontmatter.description}
+      slug={slug}
+      embedUrl={frontmatter.embedUrl}
     />
   </head>
   <body>
