--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -21,6 +21,8 @@ const pageTitle = title ? `${title} - ${hisMetadata.title}` : hisMetadata.title;
 ---
 
 <meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="icon" type="image/x-icon" href="/favicon.ico" />
 <title>{pageTitle}</title>
 <meta name="description" content={description} />
 <meta property="og:url" content={url} />
