--- a/src/layouts/HomeLayout.astro
+++ b/src/layouts/HomeLayout.astro
@@ -1,12 +1,10 @@
 ---
+import BaseHead from '@/components/BaseHead.astro';
 ---
 
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <title>Hope in Source</title>
+    <BaseHead />
   </head>
   <body>
     <slot />
